<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.signupapp.ui.model.SignUpFormModel" />

    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/d16"
            android:paddingEnd="@dimen/d16"
            android:paddingBottom="@dimen/d16">

            <!-- Top section -->
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d16"
                android:fontFamily="sans-serif-medium"
                android:text="@string/profile_creation"
                android:textColor="@color/text_color_title"
                android:textSize="@dimen/sp38"
                android:textStyle="bold"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintHorizontal_bias="0"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewSubtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d8"
                android:fontFamily="sans-serif"
                android:text="@string/use_the_form_below_to_submit_your_portfolio"
                android:textColor="@color/text_color_description"
                android:textSize="@dimen/sp14"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintHorizontal_bias="0"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/textViewSubtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d4"
                android:fontFamily="sans-serif"
                android:text="@string/an_email_and_password_are_required"
                android:textColor="@color/text_color_description"
                android:textSize="@dimen/sp14"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintHorizontal_bias="0"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/textViewSubtitle1" />

            <!-- Avatar section -->
            <include
                android:id="@+id/textViewAvatar"
                layout="@layout/avatar_layout"
                android:layout_width="@dimen/d0"
                android:layout_height="@dimen/d0"
                android:layout_marginTop="@dimen/d32"
                android:clickable="true"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintHeight_percent="0.25"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@id/textViewSubtitle2"
                bind:layout_constraintWidth_percent="0.4"
                bind:dataModel="@{model}" />

            <!-- Input fields -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                style="@style/TextInputLayoutOutlinedBox"
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d8"
                android:hint="@string/first_name"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/textViewAvatar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="text"
                    android:textColor="@color/dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmailAddress"
                style="@style/TextInputLayoutOutlinedBox"
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d8"
                android:hint="@string/email_address"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/textInputLayoutFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                style="@style/TextInputLayoutOutlinedBox"
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d8"
                android:hint="@string/password"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:textColor="@color/dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutWebsite"
                style="@style/TextInputLayoutOutlinedBox"
                android:layout_width="@dimen/d0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d8"
                android:hint="@string/website"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textUri"
                    android:textColor="@color/dark_grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Submit button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/BtnSubmit"
                android:layout_width="@dimen/d0"
                android:layout_height="@dimen/d48"
                android:layout_marginTop="@dimen/d16"
                android:layout_marginBottom="@dimen/d4"
                android:background="@drawable/gradual_background"
                android:fontFamily="sans-serif"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16"
                bind:backgroundTint="@null"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toBottomOf="@id/textInputLayoutWebsite"
                bind:layout_constraintVertical_bias="1" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/d16"
                android:indeterminate="true"
                android:visibility="invisible"
                bind:indicatorSize="@dimen/d24"
                bind:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
                bind:layout_constraintEnd_toEndOf="parent"
                bind:layout_constraintHorizontal_bias="1"
                bind:layout_constraintStart_toEndOf="@id/textViewTitle"
                bind:layout_constraintTop_toTopOf="@+id/textViewTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>