<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="com.example.signupapp.ui.model.SignUpFormModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/d16"
        tools:context=".ui.activity.MainActivity">

        <!-- Top section -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@{@string/hello_user(model.name)}"
            android:textColor="@color/text_color_title"
            android:textSize="@dimen/sp38"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSubtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d8"
            android:fontFamily="sans-serif-medium"
            android:text="@string/successful_sign_in_description"
            android:textColor="@color/text_color_description"
            android:textSize="@dimen/sp14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


        <!-- Avatar section -->
        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/avatarRootCv"
            android:layout_width="@dimen/d0"
            android:layout_height="@dimen/d0"
            android:layout_marginTop="@dimen/d32"
            android:visibility="@{model.image != null ? View.VISIBLE : View.GONE}"
            app:cardCornerRadius="@dimen/d16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSubtitle1"
            app:layout_constraintWidth_percent="0.4"
            tools:context=".ui.activity.MainActivity">

            <ImageView
                android:id="@+id/avatarIv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/avatar_view"
                android:scaleType="centerCrop"
                android:setImageBitmap="@{model.image}"
                tools:src="@tools:sample/backgrounds/scenic" />

        </androidx.cardview.widget.CardView>


        <!-- input review section -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/TextViewWebsite"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:autoLink="all"
            android:linksClickable="true"
            android:text="@{model.website}"
            android:textColorLink="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarRootCv"
            tools:text="google.com" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/TextViewName"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextViewWebsite"
            tools:text="Muhammed Akkad" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/TextViewEmailAddress"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextViewName"
            tools:text="mhammad.akkad@gmail.com" />

        <!-- Submit button -->
        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/d0"
            android:layout_height="@dimen/d48"
            android:layout_marginTop="@dimen/d16"
            android:layout_marginBottom="@dimen/d4"
            android:background="@drawable/gradual_background"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextViewEmailAddress"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>